@@ -1,6 +1,6 @@
 # Author: Ramon Casero <rcasero@gmail.com>
 # Copyright © 2010-2011 University of Oxford
-# Version: 0.3.0
+# Version: 0.3.1
 # $Rev$
 # $Date$
 #
@@ -48,28 +48,28 @@ include_directories("${CMAKE_CURRENT_SOURCE_DIR}/third-party/tclap-1.2.1/include
 ADD_EXECUTABLE(extractVoxelCoordinatesFromSegmentationMask
   ExtractVoxelCoordinatesFromSegmentationMask.cxx)
 TARGET_LINK_LIBRARIES(extractVoxelCoordinatesFromSegmentationMask 
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # padImageWithVoxels
 ADD_EXECUTABLE(padSegmentationMaskWithVoxels
   PadSegmentationMaskWithVoxels.cxx)
 TARGET_LINK_LIBRARIES(padSegmentationMaskWithVoxels
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # rotate3DImage
 ADD_EXECUTABLE(rotate3DImage
   Rotate3DImage.cxx)
 TARGET_LINK_LIBRARIES(rotate3DImage
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # resize3DImage
 ADD_EXECUTABLE(resize3DImage
   Resize3DImage.cxx)
 TARGET_LINK_LIBRARIES(resize3DImage
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # skeletonize3DSegmentation
@@ -77,21 +77,21 @@ ADD_EXECUTABLE(skeletonize3DSegmentation
   Skeletonize3DSegmentation.cxx)
 INCLUDE_DIRECTORIES(third-party/itkBinaryThinningImageFilter3D/Source)
 TARGET_LINK_LIBRARIES(skeletonize3DSegmentation
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # vesselness3DImage
 ADD_EXECUTABLE(vesselness3DImage
   Vesselness3DImage.cxx)
 TARGET_LINK_LIBRARIES(vesselness3DImage
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 # rigidRegistration2D
 ADD_EXECUTABLE(rigidRegistration2D
   RigidRegistration2D.cxx)
 TARGET_LINK_LIBRARIES(rigidRegistration2D
-  boost_system boost_filesystem
+  ${Boost_LIBRARIES}
   ${ITK_LIBRARIES})
 
 ################################################################
